# partial-config

./: Cargo.toml  README.md
examples/: cli.rs
src/: lib.rs  monoid.rs
tests/: combine_config.rs
