[package]
name = "partial-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partfun_derive = "0.1.0"
partial-functional = { version = "0.1.0", path = "../partial-functional" }

[dev-dependencies]
test-case = "2.1.0"
